Fix the font-size on homepage on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,10 +10,9 @@ body {
 
 #intro-text, .v-center {
     font-family: 'Nunito Sans', sans-serif;
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     align-self: center;
-    padding-top: 100px;
-    padding-right: 70px;
+    padding: 0 1em;
     color: white;
    
 }
